@@ -9,16 +9,16 @@
 <div id="content-full">
 <div id="categories-four">
 	<?php if ( get_theme_mod( 'myknowledgebase_exclude' ) ) :
-		$exclude = esc_attr( get_theme_mod( 'myknowledgebase_exclude' ) ); // customizer get categories to exclude
+		$exclude = esc_attr( get_theme_mod( 'myknowledgebase_exclude' ) );
 	else :
-		$exclude = ''; // means exclude no categories
+		$exclude = '';
 	endif;
 
 	$myknowledgebase_cat_args = array(
-		'hide_empty' => 0, // 0 means also list empty categories
-		'exclude' => $exclude, // exclude categories
-		'orderby' => 'name', // sort categories by name
-		'order' => 'asc' // list categories in ascending order
+		'hide_empty' => 0,
+		'exclude' => $exclude,
+		'orderby' => 'name',
+		'order' => 'asc'
 	);
 
 	$myknowledgebase_cats = get_categories( $myknowledgebase_cat_args );
@@ -27,16 +27,24 @@
 		echo '<ul class="cat-list"><li class="cat-name"><a href="' . get_category_link( $cat->cat_ID ) . '" title="' . $cat->name . '" >' . $cat->name . '</a></li>';
 
 		if ( get_theme_mod( 'myknowledgebase_posts' ) ) :
-			$posts_per_page = esc_attr( get_theme_mod( 'myknowledgebase_posts' ) ); // customizer get number of posts
+			$posts_per_page = esc_attr( get_theme_mod( 'myknowledgebase_posts' ) );
 		else :
-			$posts_per_page = -1; // -1 means list all posts
+			$posts_per_page = -1;
+		endif;
+
+		if ( get_theme_mod( 'myknowledgebase_order' ) == 'name' ) :
+			$orderby = 'name';
+			$order = 'asc';
+		else :
+			$orderby = 'date';
+			$order = 'desc';
 		endif;
 
 		$myknowledgebase_post_args = array(
-			'posts_per_page' => $posts_per_page, // posts per page
-			'orderby' => 'date', // sort posts by date
-			'order' => 'desc', // list posts in descending order
-			'category__in' => $cat->cat_ID // list posts from all categories and posts from sub category will be hidden from their parent category
+			'posts_per_page' => $posts_per_page,
+			'orderby' => $orderby,
+			'order' => $order,
+			'category__in' => $cat->cat_ID
 		);
 
 		$myknowledgebase_posts = get_posts( $myknowledgebase_post_args ); 
@@ -47,6 +55,6 @@
 	
 		echo '</ul>';
 	endforeach; ?>
-</div>	
-</div>	
+</div>
+</div>
 <?php get_footer(); ?>
